# problematic-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-improved  LICENSE  Pipfile  README.md  api_list.py  api_post.py  brute.py  csp.txt  db_init.py  libapi.py  libmfa.py  libsession.py  libuser.py  main.py  mod_api.py  mod_posts.py  mod_user.py  pyproject.toml  requirements.txt  trivy-results-better-high-critical.json  trivy-results-better.json  trivy-results-high-critical.json  trivy-results.json  vulpy-ssl.py  vulpy.py
.github/workflows/: main.yml
static/: w3.css
templates/: csp.html  footer.html  head.html  messages.html  mfa.disable.html  mfa.enable.html  posts.view.html  user.chpasswd.html  user.create.html  user.login.html  user.login.mfa.html  welcome.html
