[project]
name = "problematic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"aiohappyeyeballs==2.6.1",
	"aiohttp==3.13.1",
	"aiosignal==1.4.0",
	"attrs==25.4.0",
	"blinker==1.9.0",
	"certifi==2025.10.5",
	"cffi==2.0.0",
	"chardet==5.2.0",
	"charset-normalizer==3.4.4",
	"click==8.3.0",
	"cryptography==46.0.3",
	"flask==3.1.2",
	"frozenlist==1.8.0",
	"geoip2==5.1.0",
	"idna==3.11",
	"importlib-metadata==8.7.0",
	"itsdangerous==2.2.0",
	"jinja2==3.1.6",
	"jsonschema==4.25.1",
	"jsonschema-specifications==2025.9.1",
	"markupsafe==3.0.3",
	"maxminddb==2.8.2",
	"multidict==6.7.0",
	"pillow==12.0.0",
	"propcache==0.4.1",
	"pycparser==2.23",
	"pyjwt==2.10.1",
	"pyotp==2.9.0",
	"pyrsistent==0.20.0",
	"qrcode==8.2",
	"referencing==0.37.0",
	"requests==2.32.5",
	"rpds-py==0.27.1",
	"six==1.17.0",
	"urllib3==2.5.0",
	"werkzeug==3.1.3",
	"yarl==1.22.0",
	"zipp==3.23.0",
]
